<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<name>Unigrid Hedgehog Native Image</name>
	<groupId>org.unigrid.hedgehog</groupId>
	<artifactId>hedgehog-native</artifactId>
	<version>0.0.8-SNAPSHOT</version>
	<packaging>jar</packaging>
	<parent>
		<groupId>org.unigrid.hedgehog</groupId>
		<artifactId>hedgehog-parent</artifactId>
		<version>0.0.8-SNAPSHOT</version>
	</parent>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<graal.version>22.3.0</graal.version>
		<surefireArgLine/>
	</properties>
	<profiles>
		<profile>
			<id>Linux</id>
			<activation><os><name>Linux</name></os></activation>
			<properties>
				<executable.name>hedgehog.bin</executable.name>
				<extraNativeOption>-H:+StaticExecutableWithDynamicLibC</extraNativeOption>
			</properties>
		</profile>
		<profile>
			<id>Windows</id>
			<activation><os><family>Windows</family></os></activation>
			<properties>
				<executable.name>hedgehog</executable.name>
				<extraNativeOption>-DNOP=true</extraNativeOption>
                                <url>https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-${graal.version}/graalvm-ce-java17-windows-amd64-${graal.version}.zip</url>
                                <platform>windows</platform>
                                <unzipLocation>${basedir}\target\unziped</unzipLocation>
                                <downloadName>graal.zip</downloadName>
                                <downloadLocation>${basedir}\target\download/</downloadLocation>
                                <localInstaller>${unzipLocation}\graalvm-ce-java17-${graal.version}\bin\gu.cmd</localInstaller>
				<arthur.nativeImage>${unzipLocation}\graalvm-ce-java17-${graal.version}\bin\native-image.cmd</arthur.nativeImage>
			</properties>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>com.googlecode.maven-download-plugin</groupId>
							<artifactId>download-maven-plugin</artifactId>
							<executions>
								<execution>
									<phase>process-resources</phase>
									<goals>
										<goal>wget</goal>
									</goals>
									<configuration>
										<url>${url}</url>
										<outputFileName>${downloadName}</outputFileName>
										<outputDirectory>${downloadLocation}</outputDirectory>
									</configuration>
								</execution>
							</executions>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-antrun-plugin</artifactId>
							<executions>
								<execution>
									<id>default-cli</id>
									<phase>package</phase>
									<goals>
										<goal>run</goal>
									</goals>
									<configuration>
										<target>
											<unzip src="${downloadLocation}${downloadName}" dest="${unzipLocation}"/>
										</target>
									</configuration>
								</execution>
							</executions>
						</plugin>
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>exec-maven-plugin</artifactId>
							<executions>
								<execution>
									<id>native-image-install</id>
									<phase>package</phase>
									<goals>
										<goal>exec</goal>
									</goals>
									<configuration>
										<executable>${localInstaller}</executable>
										<commandlineArgs>install native-image</commandlineArgs>
									</configuration>
								</execution>
							</executions>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<id>MacOS</id>
			<activation><os><family>Mac</family></os></activation>
			<properties>
				<executable.name>hedgehog.bin</executable.name>
				<extraNativeOption>-DNOP=true</extraNativeOption>
                                <platform>macosx64</platform>
				<arthur.nativeImage>native-image</arthur.nativeImage>
				<arthur.buildStaticImage>false</arthur.buildStaticImage>
			</properties>
		</profile>
	</profiles>
	<dependencies>
		<dependency>
			<groupId>org.graalvm.sdk</groupId>
			<artifactId>graal-sdk</artifactId>
			<version>${graal.version}</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.nativeimage</groupId>
			<artifactId>svm</artifactId>
			<version>${graal.version}</version>
		</dependency>
		<dependency>
			<groupId>org.unigrid.hedgehog</groupId>
			<artifactId>hedgehog</artifactId>
			<version>0.0.8-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.unigrid.hedgehog</groupId>
			<artifactId>hedgehog-common</artifactId>
			<version>0.0.8-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-compress</artifactId>
			<version>1.26.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-exec</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>net.harawata</groupId>
			<artifactId>appdirs</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<configuration>
					<argLine>
						@{surefireArgLine}
						-javaagent:"${settings.localRepository}"/com/github/hazendaz/jmockit/jmockit/1.49.3/jmockit-1.49.3.jar
						-Dorg.jboss.netty.debug=true
					</argLine>
					<trimStackTrace>false</trimStackTrace>
					<reuseForks>false</reuseForks>
					<forkCount>${system.numcores}</forkCount>
					<systemPropertyVariables>
						<testoutput.target>${project.build.directory}</testoutput.target>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>17</release>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.tentackle</groupId>
				<artifactId>tentackle-jlink-maven-plugin</artifactId>
				<version>17.12.0.0</version>
				<configuration>
					<mainClass>org.unigrid.hedgehog.Hedgehog</mainClass>
					<stripDebug>true</stripDebug>
					<excludeModules>jdk.jfr</excludeModules>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jlink</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.googlecode.maven-download-plugin</groupId>
				<artifactId>download-maven-plugin</artifactId>
				<version>1.6.8</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.geronimo.arthur</groupId>
				<artifactId>arthur-maven-plugin</artifactId>
				<version>1.0.5</version>
				<configuration>
					<main>org.unigrid.hedgehog.nativeimage.NativeImage</main>
					<graalVersion>${graal.version}.r17</graalVersion>
					<allowIncompleteClasspath>true</allowIncompleteClasspath>
					<classpath>
						<classpath>${org.unigrid.hedgehog:hedgehog-common:jar}</classpath>
						<classpath>${org.graalvm.sdk:graal-sdk:jar}</classpath>
						<classpath>${project.build.directory}/classes</classpath>
						<classpath>${org.apache.commons:commons-compress:jar}</classpath>
						<classpath>${org.apache.commons:commons-lang3:jar}</classpath>
						<classpath>${org.apache.commons:commons-exec:jar}</classpath>
						<classpath>${net.harawata:appdirs:jar}</classpath>
						<classpath>${org.slf4j:slf4j-api:jar}</classpath>
						<classpath>${ch.qos.logback:logback-core:jar}</classpath>
						<classpath>${ch.qos.logback:logback-classic:jar}</classpath>
						<classpath>${net.java.dev.jna:jna-platform:jar}</classpath>
						<classpath>${net.java.dev.jna:jna:jar}</classpath>
					</classpath>
					<otherFiles>
						<otherFile>${project.build.directory}/${project.artifactId}-${project.version}-jlink.zip</otherFile>
					</otherFiles>
					<output>${project.build.directory}/${executable.name}</output>
					<customOptions>
						<customOption>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core=ALL-UNNAMED</customOption>
						<customOption>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</customOption>
						<customOption>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.hosted=ALL-UNNAMED</customOption>
						<customOption>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.hosted.c=ALL-UNNAMED</customOption>
						<customOption>--features=org.unigrid.hedgehog.nativeimage.BundleFeature</customOption>
						<customOption>-H:IncludeResources=application.properties</customOption>
						<customOption>${extraNativeOption}</customOption>
					</customOptions>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>native-image</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.12.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
			<plugin>
				<groupId>pl.gdela</groupId>
				<artifactId>socomo-maven</artifactId>
				<dependencies>
					<dependency>
						<groupId>org.ow2.asm</groupId>
						<artifactId>asm</artifactId>
						<version>9.1</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<goals>
							<goal>analyze</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>../application/src/main/resources-filtered</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.16.0</version>
				<configuration>
					<includeTests>true</includeTests>
					<targetJdk>17</targetJdk>
					<rulesets>
						<ruleset>${project.basedir}/pmd.xml</ruleset>
					</rulesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.6.0.0</version>
			</plugin>
		</plugins>
	</reporting>
</project>
